--- a/styles.css
+++ b/styles.css
@@ -16,61 +16,67 @@
     font-weight: 400;
 }
 
-body {
+body, html {
     font-family: 'GothamBook';
+    height: 100%;
+    display: grid;
+  }
+
+.center-me {
+    margin: auto;
 }
 
-section {
-    padding: 1em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+.card {
+    margin-right: 15px;
+    margin-bottom: 15px;
+    border: 4px solid; 
+    border-radius:0%; 
 }
 
-.blueCard {
-   margin-right: 15px;
-   margin-bottom: 15px;  
-   border: 4px solid #55C7F1;         
-}
-
-.blueCardHeader {
+.CardHeader {
     color: white !important;
+    min-height: 75px;
+}
+
+.blueCard { 
+    border-color: #55C7F1;
+}
+
+.blueCardHeader{
     background-color: #55C7F1;
 }
 
 .orangeCard {
-    border-color: #D97953;
-    border-radius: 0mm;
-    border-width: thick;
+ border-color: #D97953;    
 }
 
 .orangeCardHeader {
-    color: white !important;
     background-color: #D97953;
+    text-align: center;
+    font-family: 'GothamBold';
+    font-size: 3rem;
 }
 
 .purpleCard {
-    border-color: #A683B8;
-    border-radius: 0mm;
-    border-width: thick;
+    border-color: #A683B8;  
 }
 
 .purpleCardHeader {
-    color: white !important;
     background-color: #A683B8;
+    text-align: center;
+    font-family: 'GothamBold';
+    font-size:x-large;
 }
 
 .cyanCard {
-    border-color: #65C1AE;
-    border-radius: 0mm;
-    border-width: thick;
+    border-color: #65C1AE;    
 }
 
 .cyanCardHeader {
-    color: white !important;
     background-color: #65C1AE;
+    text-align: center;
+    font-family: 'GothamBold';
+    font-size: x-large;
 }
 
 .pTag {
@@ -81,10 +87,27 @@ section {
 .pName {
     font-family: 'GothamBook';
     font-size: 1rem;
+    font-weight:bold;
     word-wrap: break-word;
 }
 .card-text {
-    color: #07b5f5;
     font-family: 'GothamMedium';
-    font-size: 5rem;            
+    font-size: 5rem;          
+}
+.blue-card-text {
+    color:#55C7F1 ;
+}
+.orange-card-text {
+    color:#D97953 ;
+}
+.purple-card-text {
+    color:#A683B8 ;
+}
+.cyan-card-text {
+    color:#65C1AE ;
+}
+.patientText{
+    color:#323569;
+    font-weight: 800;
+    border-bottom: 1px solid black;
 }
